# Reto-Final-ROBOTICA-Yahboom-ROSMASTER-

./: README.md  README_unique_line.md  UNIQUE_LINE_DEBUG.md  lidar_viz.py
capytown_granprix/: package.xml  setup.cfg  setup.py
capytown_granprix/capytown_granprix/: event_types.py  geometry_utils.py  grid_map.py  lidar_processor_node.py  lidar_utils.py  metrics_logger_node.py  state_machine_node.py  stop_sign_detector_node.py  unique_line_node.py  wall_follower_node.py  web_dashboard_node.py
capytown_granprix/config/: granprix_params.yaml  unique_line_params.yaml
capytown_granprix/launch/: granprix_bringup.launch.py  unique_line.launch.py
capytown_granprix/web/: dashboard.html
capytown_interfaces/: CMakeLists.txt  package.xml
capytown_interfaces/msg/: LidarZones.msg  RobotEvent.msg
sim_local/: dibujar_mapa.py  environment.py  robot_model.py  run_sim.py  run_sim_giro.py  run_sim_laberinto.py  run_sim_obstaculo.py  turn_control.py  unique_line_10_tests_summary.csv  unique_line_control.py  unique_line_report.md  unique_line_simulator.py  wall_follow_control.py
sim_local/unique_line_runs/: run_01_d008cm.csv  run_02_d010cm.csv  run_03_d012cm.csv  run_04_d014cm.csv  run_05_d016cm.csv  run_06_d018cm.csv  run_07_d020cm.csv  run_08_d024cm.csv  run_09_d028cm.csv  run_10_d032cm.csv
